--- a/res/xml/colt_enigma_misc.xml
+++ b/res/xml/colt_enigma_misc.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2017 The ABC rom
-     Copyright (C) 2018 ColtOS Project
+<!-- Copyright (C) 2020 ColtOS Project
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
@@ -11,20 +10,9 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+<PreferenceScreen
+        xmlns:android="http://schemas.android.com/apk/res/android"
+	android:title="@string/misc_title"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
-
-        <!-- Colt Logo Header -->
-        <Preference 
-           android:key="colt_header_about"
-           android:layout="@layout/colt_header_about" />
-
-	<!-- Lock Screen -->
-	<com.colt.enigma.preference.CategoryColtPreference
-	    android:key="lockscreen_category"
-	    android:title="@string/lockscreen_title"
-	    android:summary="@string/lockscreen_summary"	    
-	    android:fragment="com.colt.enigma.fragments.LockScreenSettings" />
 
 </PreferenceScreen>
