--- a/res/xml/statusbar_tab.xml
+++ b/res/xml/statusbar_tab.xml
@@ -15,6 +15,25 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+   <!-- Colt Logo Header -->
+        <Preference 
+           android:key="colt_header_about"
+           android:layout="@layout/colt_header_about" />
+
+	<!-- Status Bar -->
+	<com.colt.enigma.preference.CategoryColtPreference
+	    android:key="statusbar_category"
+	    android:title="@string/statusbar_title"
+            android:fragment="com.colt.enigma.fragments.StatusBarSettings"
+	    android:summary="@string/statusbar_summary" />
+
+        <!-- Quick Settings -->
+        <com.colt.enigma.preference.CategoryColtPreference
+	    android:key="quicksettings_category"
+	    android:title="@string/quicksettings_title"
+            android:fragment="com.colt.enigma.fragments.QuickSettings"
+            android:summary="@string/quicksettings_summary" />
+
 
 </PreferenceScreen>
 
