--- a/res/xml/system_tab.xml
+++ b/res/xml/system_tab.xml
@@ -15,5 +15,23 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+        <!-- Colt Logo Header -->
+        <Preference 
+           android:key="colt_header_about"
+           android:layout="@layout/colt_header_about" />
+
+        <!-- Notifications -->
+	<com.colt.enigma.preference.CategoryColtPreference
+            android:key="notifications_category"
+            android:title="@string/notifications_title"
+            android:fragment="com.colt.enigma.fragments.NotificationSettings"
+	    android:summary="@string/notifications_summary" />
+
+	<!-- Misc -->
+	<com.colt.enigma.preference.CategoryColtPreference
+            android:key="misc_category"
+            android:title="@string/misc_title" 
+	    android:summary="@string/misc_summary"
+            android:fragment="com.colt.enigma.fragments.MiscSettings" />
 
 </PreferenceScreen>
