More Adaption for ColtEnigma

--- a/res/values/colt_strings.xml
+++ b/res/values/colt_strings.xml
@@ -32,20 +32,6 @@
     <string name="lockscreen_bottom_decoration">LockScreen Bottom Decorations</string>
     <string name="lockscreen_weather_category">LockScreen Weather Styling</string>
 
-    <!-- Status Bar fragment -->  
-    <string name="statusbar_settings_title">Status bar</string>
-
-    <!-- Lockscreen Fragment -->
-    <string name="lockscreen_settings_title">Lockscreen</string>
-
-    <string name="notifications_title">Notifications</string>
-    <string name="button_title">Buttons</string>
-    <string name="gestures_title">Gestures</string>
-    <string name="navbar_title">Navigation bar</string>
-    <string name="powermenu_title">Power menu</string>
-    <string name="volume_title">Volume rockers</string>
-    <string name="misc_title">Miscellaneous</string>
-
     <!-- Colt Tabs Main  -->
     <string name="colt_title">The PandoraBox</string>
 
@@ -69,10 +55,39 @@
     <string name="volume_title">Volume rockers</string>
     <string name="notifications_title">Notifications</string>
 
+    <!-- Summaries -->
+    <string name="quicksettings_summary">Quick settings Customizations</string>
+    <string name="buttonsettings_summary">Perform custom button actions</string>
+    <string name="lockscreen_summary">Various options for lockscreen</string>
+    <string name="statusbar_summary">Statusbar Customizations</string>
+    <string name="navbar_summary">Various options for Navbar</string>
+    <string name="powermenu_summary">Customize elements to be displayed in power menu</string>
+    <string name="gesture_summary">Gesture Customizations</string>
+    <string name="notifications_summary">Notifications and Incall settings</string>
+    <string name="misc_summary">Miscellaneous things to be checked here</string>
+    
+    <!-- Team Info -->
+    <string name="about_team_title">About ColtOS Team</string>
+    <string name="about_team_summary">Lets see who all are there :)</string>
+    <string name="colt_team_title">Meet Our ColtOS Team</string>
+    <string name="about_coltos_screen_title">About ColtOS</string>
+    <string name="about_coltos_title">So From Where ColtOS Arrived...</string>
+    <string name="coltos_about_summary">ColtOS was started by me (Rakesh Batra), Nitin, Nikhil and Debojit in early 2017 and it was a small but an effective group also and we all were in learning stage that\'s why Colt as a name arrived means a Learner. To start with ColtOS was based on LOS but now we have moved to aosp base and now in ColtOS Team we still have a team with some new members also and is just like a family to me, i would still like to mention the name of each and every member in ColtOS Team, 1. Rakesh Batra 2. Nitinkumar Chobhe 3. Roger.T 4.Debojit Deb, 5. Vinoth, 6. Santosh (SuperdroidBond), 7. Mukesh, 8. Athul, 9. Nikhil, 10. Meet Gohil, 11. Saurabh Hooda and 12. Anupam D Moran, that\'s the wonderfull team we have!!</string>
+
     <!-- General strings -->
     <string name="ok">OK</string>
     <string name="reset">Reset</string>
     <string name="cancel">Cancel</string>
     <string name="save">Save</string>
+
+    <!-- Color Picker -->
+    <string name="dialog_color_picker">Color Picker</string>
+    <string name="press_color_to_apply">Press on color below to apply</string>
+    <string name="arrow_right">→</string>
+    <string name="arrow_down">↓</string>
+    <string name="hex">Hex:</string>
+    <string name="hex_hint">#ff000000</string>
+    <string name="set">Set</string>
+    <string name="color_default">Default</string>
 
 </resources>
