--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -28,4 +28,5 @@
     <!-- Previews -->
     <color name="preview_container_border">@*android:color/accent_device_default_light</color>
 
+    <color name="theme_accent">@*android:color/accent_device_default_light</color>
 </resources>
