Center Notification headers (2/2)

--- a/res/xml/colt_enigma_notifications.xml
+++ b/res/xml/colt_enigma_notifications.xml
@@ -54,4 +54,11 @@
         android:summary="@string/notification_headers_summary"
         android:defaultValue="true" />
 
+    <com.colt.enigma.preference.SystemSettingSwitchPreference
+        android:key="center_notification_headers"
+        android:title="@string/center_notification_headers_title"
+        android:summary="@string/center_notification_headers_summary"
+        android:dependency="notification_headers"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
