--- a/res/values/colt_colors.xml
+++ b/res/values/colt_colors.xml
@@ -52,4 +52,29 @@
     <color name="default_inactive_shape_color">#e5e5e5</color>
     <color name="default_inactive_color">#212121</color>
     <color name="default_shape_inactive_color">#888888</color>    
+
+    <!-- OwlsNest icon background colors -->
+    <color name="owlsnest_animations_background">@*android:color/accent_device_default_light</color>
+    <color name="owlsnest_battery_background">@*android:color/accent_device_default_light</color>
+    <color name="owlsnest_changelog_background">@*android:color/accent_device_default_light</color>
+    <color name="owlsnest_clock_background">@*android:color/accent_device_default_light</color>
+    <color name="owlsnest_display_background">@*android:color/accent_device_default_light</color>
+    <color name="owlsnest_gestures_background">@*android:color/accent_device_default_light</color>
+    <color name="owlsnest_headsup_background">@*android:color/accent_device_default_light</color>
+    <color name="owlsnest_hw_keys_background">@*android:color/accent_device_default_light</color>
+    <color name="owlsnest_led_settings_background">@*android:color/accent_device_default_light</color>
+    <color name="owlsnest_lockscreen_aosp_background">@*android:color/accent_device_default_light</color>
+    <color name="owlsnest_lockscreen_general_background">@*android:color/accent_device_default_light</color>
+    <color name="owlsnest_lockscreen_tuner_background">@*android:color/accent_device_default_light</color>
+    <color name="owlsnest_lockscreen_weather_background">@*android:color/accent_device_default_light</color>
+    <color name="owlsnest_miscellaneous_background">@*android:color/accent_device_default_light</color>
+    <color name="owlsnest_themer_background">@*android:color/accent_device_default_light</color>
+    <color name="owlsnest_traffic_background">@*android:color/accent_device_default_light</color>
+    <color name="owlsnest_navigationbar_background">@*android:color/accent_device_default_light</color>
+    <color name="owlsnest_notifications_general_background">@*android:color/accent_device_default_light</color>
+    <color name="owlsnest_powerbutton_background">@*android:color/accent_device_default_light</color>
+    <color name="owlsnest_quick_settings_background">@*android:color/accent_device_default_light</color>
+    <color name="owlsnest_recents_background">@*android:color/accent_device_default_light</color>
+    <color name="owlsnest_statusbar_items_background">@*android:color/accent_device_default_light</color>
+    <color name="owlsnest_volume_rocker_background">@*android:color/accent_device_default_light</color>
 </resources> 
