--- a/res/values/colt_dimens.xml
+++ b/res/values/colt_dimens.xml
@@ -27,4 +27,7 @@
     <dimen name="default_nav_item_text_padding">8dp</dimen>
     <dimen name="default_nav_item_title_max_width">80dp</dimen>
     <dimen name="default_icon_size">24dp</dimen>
+
+    <!-- Where the category icon will start (from the left) -->
+    <dimen name="owlsnest_cat_icon_image_inset">6dp</dimen>
 </resources>
