--- a/res/xml/system_tab.xml
+++ b/res/xml/system_tab.xml
@@ -24,6 +24,7 @@
 	<com.colt.enigma.preference.CategoryColtPreference
             android:key="notifications_category"
             android:title="@string/notifications_title"
+	    android:icon="@drawable/ic_notifications_general_background"
             android:fragment="com.colt.enigma.fragments.NotificationSettings"
 	    android:summary="@string/notifications_summary" />
 
@@ -32,6 +33,7 @@
 	    android:key="system_colors"
             android:title="@string/system_colors"
 	    android:summary="@string/system_colors_summary"
+	    android:icon="@drawable/ic_themer_background"
 	    android:fragment="com.colt.enigma.fragments.Themes" />
 	
 	<!-- Misc -->
@@ -39,6 +41,7 @@
             android:key="misc_category"
             android:title="@string/misc_title" 
 	    android:summary="@string/misc_summary"
+	    android:icon="@drawable/ic_miscellaneous_background"
             android:fragment="com.colt.enigma.fragments.MiscSettings" />
 
 </PreferenceScreen>
