Status network traffic [2/2]
arrow-edits:
 - migrate to androidx

Change-Id: I1769659ce44be6be0187757627b82a8dabbc743d

--- a/res/xml/colt_enigma_statusbar.xml
+++ b/res/xml/colt_enigma_statusbar.xml
@@ -53,4 +53,10 @@
          android:summary="@string/carrier_label_category_summary"
          android:fragment="com.colt.enigma.fragments.CarrierLabelSettings" />
 
+    <Preference
+        android:key="traffic_category"
+        android:title="@string/traffic_title"
+        android:summary="@string/traffic_summary"
+        android:fragment="com.colt.enigma.fragments.TrafficIndicators"/>
+
 </PreferenceScreen>
