--- a/res/xml/colt_enigma_lockscreen.xml
+++ b/res/xml/colt_enigma_lockscreen.xml
@@ -101,6 +101,15 @@
             android:summary="@string/fod_recog_animation_summary"
             android:defaultValue="false" />
 
+        <com.colt.enigma.preference.SystemSettingListPreference
+            android:key="fod_anim"
+            android:title="@string/fod_recog_animation_effect_title"
+            android:summary="%s"
+            android:entries="@array/fod_recog_animation_entries"
+            android:entryValues="@array/fod_recog_animation_values"
+            android:defaultValue="0"
+            android:dependency="fod_recognizing_animation" />
+
         <!-- FOD Nightlight -->
         <com.colt.enigma.preference.SystemSettingSwitchPreference
             android:key="fod_night_light"
