--- a/res/values/colt_strings.xml
+++ b/res/values/colt_strings.xml
@@ -689,4 +689,8 @@
     <string name="network_traffic_location_title">Traffic indicator placement</string>
     <string name="network_traffic_location_summary">Place indicator in either status bar or expanded header</string>
 
+    <!-- Old Mobile Type Icons -->
+    <string name="use_old_mobiletype_title">Old mobiletype</string>
+    <string name="use_old_mobiletype_summary">Use pre-p mobiletype icons for signal (SystemUI reboot required)</string>
+
 </resources>
