--- a/res/xml/colt_enigma_statusbar.xml
+++ b/res/xml/colt_enigma_statusbar.xml
@@ -23,6 +23,12 @@
                 android:targetClass="com.android.systemui.tuner.StatusbarItemsActivity" />
     </Preference>
 
+    <com.colt.enigma.preference.SystemSettingSwitchPreference
+        android:key="use_old_mobiletype"
+        android:title="@string/use_old_mobiletype_title"
+        android:summary="@string/use_old_mobiletype_summary"
+        android:defaultValue="false" />
+
     <com.colt.enigma.preference.SystemSettingSwitchPreference 
          android:key="show_fourg_icon" 
          android:title="@string/show_fourg_icon_title" 
