Losckreen media art [2/2]

--- a/res/xml/colt_enigma_lockscreen.xml
+++ b/res/xml/colt_enigma_lockscreen.xml
@@ -39,4 +39,11 @@
             android:defaultValue="true" />
 
     </PreferenceCategory>
+
+        <com.colt.enigma.preference.SecureSettingSwitchPreference
+            android:key="lockscreen_media_metadata"
+            android:title="@string/lockscreen_media_art_title"
+            android:summary="@string/lockscreen_media_art_summary"
+            android:defaultValue="false" />
+
 </PreferenceScreen>
