--- a/res/values/colt_attrs.xml
+++ b/res/values/colt_attrs.xml
@@ -44,4 +44,6 @@
             <enum name="packed" value="2" />
         </attr>
     </declare-styleable>
+
+        <attr name="allowEditText" format="boolean" />
 </resources>
