--- a/res/values/colt_strings.xml
+++ b/res/values/colt_strings.xml
@@ -615,5 +615,8 @@
     <string name="status_bar_carrier_size">Carrier label size</string>
     <string name="status_bar_carrier_font_style_title">Carrier Label Font</string>
 
+    <!-- Notification headers -->
+    <string name="notification_headers_title">Notification headers</string>
+    <string name="notification_headers_summary">Show headers in the notification shade</string>
 
 </resources>
