--- a/res/values/colt_strings.xml
+++ b/res/values/colt_strings.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
   <!-- Copyright (C) 2017 ColtOS Project
- 
+
       Licensed under the Apache License, Version 2.0 (the "License");
       you may not use this file except in compliance with the License.
       You may obtain a copy of the License at
- 
+
            http://www.apache.org/licenses/LICENSE-2.0
- 
+
       Unless required by applicable law or agreed to in writing, software
       distributed under the License is distributed on an "AS IS" BASIS,
       WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -65,21 +65,21 @@
     <string name="gesture_summary">Gesture Customizations</string>
     <string name="notifications_summary">Notifications and Incall settings</string>
     <string name="misc_summary">Miscellaneous things to be checked here</string>
-    
+
     <!-- Team Info -->
     <string name="about_team_title">About ColtOS Team</string>
     <string name="about_team_summary">Lets see who all are there :)</string>
     <string name="colt_team_title">Meet Our ColtOS Team</string>
     <string name="about_coltos_screen_title">About ColtOS</string>
     <string name="about_coltos_title">So From Where ColtOS Arrived...</string>
-    <string name="coltos_about_summary">ColtOS ~ We are based on AOSP with some dependency on LOS, enriched with the useful features only from all over the Android development community. We are a small yet efficient team of working professionals and Our main moto is Quality and stability.!!</string>
+    <string name="coltos_about_summary">ColtOS is a highly customizable after market custom ROM based on Google's Android Open Source Project and other awesome custom ROMs out there. Initially started as a hobby by @RakeshBatra and now a full grown team of individuals who are equally interested in bringing the best custom ROM experience for its users :)</string>
 
     <!-- General strings -->
     <string name="ok">OK</string>
     <string name="reset">Reset</string>
     <string name="cancel">Cancel</string>
     <string name="save">Save</string>
-    <string name="default_string">Default</string>   
+    <string name="default_string">Default</string>
     <string name="unit_percent">\u0025</string>
     <string name="custom_string">Custom</string>
 
@@ -219,7 +219,7 @@
 
     <!-- ANBI -->
     <string name="anbi_title">Accidental touch</string>
-    <string name="anbi_summary">Prevent interaction with navigation buttons while the screen is being touched</string>    
+    <string name="anbi_summary">Prevent interaction with navigation buttons while the screen is being touched</string>
 
     <!-- Themes -->
     <string name="theme_type_title">ColtOS themes</string>
@@ -286,7 +286,7 @@
     <string name="power_menu_animation_dialog_title">Select power menu animation</string>
     <string name="power_menu_animation_aosp">AOSP (default)</string>
     <string name="power_menu_animation_bottom">Bottom</string>
-    <string name="power_menu_animation_top">Top</string>    
+    <string name="power_menu_animation_top">Top</string>
     <string name="power_menu_animation_xylon">Fly</string>
     <string name="power_menu_animation_slide">Slide</string>
     <string name="power_menu_animation_turn">Turn</string>
@@ -300,13 +300,13 @@
     <string name="lockscreen_battery_info_summary">Display negociated charger max current and voltage and battery temperature on lockscreen while charging</string>
 
     <!-- About colt -->
-    <string name="colt_about_title">All About ColtOS</string>
-    <string name="colt_about_summary">A little info about the team</string>
+    <string name="colt_about_title">About ColtOS</string>
+    <string name="colt_about_summary">Who are we?</string>
     <string name="colt_telegram_title">ColtOS Telegram Community</string>
     <string name="colt_telegram_summary"><a href="https://t.me/ColtEnigma">Join ColtOS community here!</a></string>
     <string name="colt_github_title">ColtOS Github</string>
     <string name="colt_github_summary"><a href="https://www.github.com/Colt-Enigma">See the ColtOS source code here!</a></string>
-    <string name="colt_about_info_summary">ColtOS was started by me (Rakesh Batra), Nitin, Nikhil and Debojit in early 2017 and it was a small but an effective group also and we all were in learning stage that\'s why Colt as a name arrived means a Learner. To start with, ColtOS was based on LOS but we have moved to aosp base and Times changed and we found best of the team members in ColtOS Team and it\'s just like a family to me, Quality and stability is our first priority as we are dedicated to bringing you the very best that Android has to offer.</string>
+    <string name="colt_about_info_summary">@string/coltos_about_summary</string>
     <string name="colt_about_team">Team ColtOS</string>
     <string name="colt_about_rakesh" translatable="false">Rakesh Batra</string>
     <string name="colt_about_rakesh_summary" translatable="false">Founder and Lead Developer</string>
@@ -332,7 +332,7 @@
     <string name="double_tap_to_sleep_statusbar_summary">Double tap on statusbar to put the device to sleep</string>
 
     <!-- Lockscreen icons -->
-    <string name="lockscreen_tuner_title">Lockscreen shortcuts</string>        
+    <string name="lockscreen_tuner_title">Lockscreen shortcuts</string>
 
     <!-- Incall vibrate options -->
     <string name="incall_vibration_category">In-call vibration options</string>
