--- a/res/xml/colt_enigma_lockscreen.xml
+++ b/res/xml/colt_enigma_lockscreen.xml
@@ -100,6 +100,13 @@
         android:key="fod_icon_picker"
         android:title="@string/fod_icon_picker_category_title">
 
+        <!-- FOD icon picker -->
+        <Preference
+            android:key="fod_icon_picker_category"
+            android:title="@string/fod_icon_picker_title"
+            android:summary="@string/fod_icon_picker_summary"
+            android:fragment="com.colt.enigma.fragments.FODIconPickerFragment" />
+
         <!-- FOD recognizing animation -->
         <com.colt.enigma.preference.SystemSettingSwitchPreference
             android:key="fod_recognizing_animation"
