--- a/res/xml/colt_enigma_lockscreen.xml
+++ b/res/xml/colt_enigma_lockscreen.xml
@@ -89,4 +89,11 @@
         android:summary="@string/hide_lockicon_summary"
         android:defaultValue="true" />
 
+        <!-- FOD Nightlight -->
+    <com.colt.enigma.preference.SystemSettingSwitchPreference
+            android:key="fod_night_light"
+            android:title="@string/fod_night_light_title"
+            android:summary="@string/fod_night_light_summary"
+            android:defaultValue="@*android:bool/disable_fod_night_light"  />
+
 </PreferenceScreen>
