--- a/res/xml/colt_enigma_misc.xml
+++ b/res/xml/colt_enigma_misc.xml
@@ -28,4 +28,16 @@
         android:summary="@string/pulse_settings_summary"
         android:fragment="com.colt.enigma.fragments.PulseSettings" />
 
+    <com.colt.enigma.preference.GlobalSettingSwitchPreference
+        android:key="aggressive_idle_enabled"
+        android:title="@string/aggressive_idle_title"
+        android:summary="@string/aggressive_idle_summary"
+        android:defaultValue="false" />
+
+    <com.colt.enigma.preference.GlobalSettingSwitchPreference
+        android:key="aggressive_standby_enabled"
+        android:title="@string/aggressive_standby_title"
+        android:summary="@string/aggressive_standby_summary"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
