--- a/res/values/colt_strings.xml
+++ b/res/values/colt_strings.xml
@@ -391,4 +391,7 @@
     <string name="qs_show_brightness_slider_show_never">Never show</string>
     <string name="qs_show_brightness_slider_show_expanded">Show when expanded</string>
     <string name="qs_show_brightness_slider_show_always">Show always</string>
+
+    <string name="allow_signature_fake">Allow signature spoofing</string>
+    <string name="allow_signature_fake_summary">Allow apps to bypass security systems by pretending to be a different app. Mainly used for MicroG.</string>
 </resources>
