--- a/res/xml/colt_enigma_misc.xml
+++ b/res/xml/colt_enigma_misc.xml
@@ -15,4 +15,10 @@
 	android:title="@string/misc_title"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+        <com.colt.enigma.preference.SecureSettingSwitchPreference
+            android:key="allow_signature_fake"
+            android:title="@string/allow_signature_fake"
+            android:summary="@string/allow_signature_fake_summary"
+            android:defaultValue="false" />
+
 </PreferenceScreen>
