Update About Colt info

--- a/res/values/colt_strings.xml
+++ b/res/values/colt_strings.xml
@@ -306,7 +306,7 @@
     <string name="colt_telegram_summary"><a href="https://t.me/ColtEnigma">Join ColtOS community here!</a></string>
     <string name="colt_github_title">ColtOS Github</string>
     <string name="colt_github_summary"><a href="https://www.github.com/Colt-Enigma">See the ColtOS source code here!</a></string>
-    <string name="colt_about_info_summary">ColtOS was started by me (Rakesh Batra), Nitin, Nikhil and Debojit in early 2017 and it was a small but an effective group also and we all were in learning stage that\'s why Colt as a name arrived means a Learner. To start with, ColtOS was based on LOS but we have moved to aosp base and Times changed and we found best of the team members in ColtOS Team and it\'s just like a family to me, Quality and stability is our first priority as we are dedicated to bringing you the very best that Android has to offer.</string>
+    <string name="colt_about_info_summary">ColtOS was started by a group of Android enthusiasts and learners lead by Rakesh in early 2017. Initial members were Nitin, Nikhil and Debojit. It was a small but effective group of like minded people. We started with supporting only 3 devices initially but then expanded the number of devices as the team members grew.As the time passed, the group was like a family. In initial days, ColtOS was based on LOS but then we moved to aosp. As any good OS, our top priorities are quality, stability and useful features</string>
     <string name="colt_about_team">Team ColtOS</string>
     <string name="colt_about_rakesh" translatable="false">Rakesh Batra</string>
     <string name="colt_about_rakesh_summary" translatable="false">Founder and Lead Developer</string>
